--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,54 @@
   text-align: center;
 }
 
+a:link {
+  text-decoration: none;
+}
+
+
+.App {
+  background-color: rgb(110, 155, 206);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.nav{
+  text-decoration: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  justify-content: center;
+}
+
+.nav-logo{
+  grid-column: 2 / 2;
+  height: 30px;
+  padding: 5% 15% 0% 15%;
+  align-self: center;
+}
+
+
+.nav-button{
+  height: 30px;
+  padding: 5% 15% 0% 15%;
+  align-self: center;
+}
+
+
+
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
+} */
+/* 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
+} */
+/* 
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,17 +59,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
+} */
+/* 
 .App-link {
   color: #61dafb;
-}
+} */
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
