--- a/src/App.css
+++ b/src/App.css
@@ -54,11 +54,16 @@ navigation {
 .nav button{
   margin-top: 38px;
   margin-right: 5px;
-  padding: 0.5em;
+  /* padding: 0.5em; */
   align-self: center;
   background-color: aquamarine;
+  /* border: steelblue 10px; */
+  /* margin: 5%; */
+  width: 40%;
+  padding: 2px;
+  border-radius: 3px;
+  box-shadow: 4px 4px;
 }
-
 logo{
   grid-column: 2 / 2;
   align-self: center;
@@ -84,6 +89,13 @@ heading {
   grid-column: 1/3;
 }
 
+#forecast-headline{
+  font-size: 14pt;
+}
+
+#forecast-summary, #forecast-detail {
+  text-align: left;
+}
 .forecast p {
   grid-column: 1 / 2;
 }
