--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,43 @@
-body{
-  /* overflow: hidden; */
-}
+:root {
+  --primary-color: rgb(110, 155, 206);
+  --secondary-color: grey;
+  --border-radius: 3px;
+}   
+
+
 
 .App {
   text-align: center;
   font-family: 'Lato', sans-serif;
-}
-
-a:link {
-  text-decoration: none;
-}
-
-
-.App {
-  background-color: rgb(110, 155, 206);
+  background-color: var(--primary-color);
   min-height: 100vh;
   display: grid;
   grid-template-areas: "main" "navigation";
   grid-template-rows: 1fr 100px;
   z-index: -1 !important;
 }
+
+/* Padding around pages */
+.view
+{
+  margin-top: 30px;
+}
+
+.view-form
+{
+  margin-top: 50%;
+}
+
+/* defines the page as a CSS Grid that sits behind the navigation bar */
 main {
-  /* background-color: #F8BBD0; */
   grid-area: main;
   height: 100%;
   z-index: -1 !important;
 }
 
+/* Navigation menu is set layers above the main content and is fixed to the bottom */
 navigation {
-  /* background-color: #7E57C2; */
-  background-color: rgb(110, 155, 206);
+  background-color: var(--primary-color);
   grid-area: navigation;
   z-index: 50 !important;
   position: fixed;
@@ -39,50 +47,65 @@ navigation {
 }
 
 .nav{
-  text-decoration: none;
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr;
   justify-content: center;
-  /* z-index: -1 !important;
-  position: relative; */
   align-self: center;
-  align-content: center;
-  
+  align-content: center; 
 }
 
 .nav button{
-  margin-top: 38px;
-  margin-right: 5px;
-  /* padding: 0.5em; */
+  margin-right: 10px;
   align-self: center;
-  background-color: aquamarine;
-  /* border: steelblue 10px; */
-  /* margin: 5%; */
-  width: 40%;
+  background-color:var(--secondary-color);
+  width: 100px;
   padding: 2px;
-  border-radius: 3px;
+  border-radius: var(--border-radius);
   box-shadow: 4px 4px;
+  
 }
+
+.nav-button-group{
+  place-self: center;
+  margin-left: 1.9em;
+  }
+
 logo{
   grid-column: 2 / 2;
   align-self: center;
 }
 
 heading {
+  padding-top: 300px;
   margin: 15px;
   font-size: 2rem;
+  text-shadow: 2px 2px var(--secondary-color);
 }
 
+
+
+/* Forecast area */
 .forecast {
   margin: auto;
   text-align: center;
-  font-size: 12px;
+  font-size: 14px;
   display: grid;
   align-items: center;
   width: 90%;
   grid-template-columns: 1fr 100px;
-  /* grid-template-rows: 1fr; */
+  }
+
+forecast-title {
+  font-weight: 700;
+}
+
+click-prompt, click-prompt div {
+  padding-top: 15px;
+  text-align: left;
+  margin-left: 1.3em !important; 
+  font-size: 12px;
+  font-style: italic;
 }
 
 #forecast-summary, #forecast-detail, #forecast-headline p {
@@ -91,8 +114,9 @@ heading {
 
 .forecast-info {
   grid-column: 1/3;
+  text-align: left;
+  margin: 0 20px;
 }
-
 
 #forecast-headline{
   font-size: 14pt;
@@ -111,38 +135,162 @@ heading {
   
 }
 
-/* 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-} */
-/* 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-/* 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
-/* 
-.App-link {
-  color: #61dafb;
-} */
 
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* form */
+.standard-form form {
+  margin: 0 30px;
+  display: grid;
+  grid-template-columns: 1fr;
+  align-content: center;
+}
+
+.standard-form input {
+  margin: 10px;
+  grid-column: 1;
+  width: 90%;
+  padding: 2px;
+  border-radius: var(--border-radius);
+  box-shadow: 2px 2px;
+}
+
+.standard-form button {
+  align-self: center;
+  background-color: var(--secondary-color);
+  width: 60%;
+  padding: 2px;
+  border-radius: var(--border-radius);
+  box-shadow: 4px 4px;
+}
+
+.standard-form textarea {
+  grid-column: 1;
+  margin: 10px;
+  height: 150px;
+  width: 90%;
+  padding: 2px;
+  resize: none;
+  border-radius: var(--border-radius);
+  box-shadow: 2px 2px;
+}
+
+
+/* Tablet */
+@media screen and (min-width: 650px) and  (max-width:1023px) {
+  /* Navigation  */
+
+  .nav-button-group{
+    justify-self: right;
+    align-self: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  .nav button{
+    margin-top: 0px;
+    margin-right: 40px;
+    width: 130px;
+    justify-self: end;
   }
-} */
+
+  /* Logo */
+  logo{
+    justify-self: left;
+  } 
+
+  /* Padding around pages */
+  .view
+{
+  margin-top: 12vh;
+}
+  
+.view-form
+{
+  margin-top: 15vh;
+  padding: 20vw;
+}
+
+/* Forecast */
+  .forecast {
+    width: 60%;
+  }
+
+}
+
+/* Desktop*/
+@media screen and (min-width: 1024px) {
+  
+  /* forecast */
+  .forecast {
+    align-items: center;
+    width: 90%;
+    grid-template-columns: 6fr 1fr;
+   }
+  
+  
+   /* Navigation */
+  .nav-button-group{
+    justify-self: right;
+    align-self: center;
+  }
+  .nav{
+    grid-template-columns: 7fr 5fr;
+  }
+
+
+  .nav button{
+    margin-top: 0px;
+    margin-right: 40px;
+    width: 200px;
+    justify-self: end;
+  }
+
+  /* Padding around pages */
+  .view
+{
+  margin-top: 12vh;
+}
+  
+.view-form
+{
+  margin-top: 0;
+  padding: 15% 20vw;
+}
+
+
+
+
+
+
+logo{
+  
+  justify-self: left;
+}
+
+
+/* form */
+.standard-form {
+  width: 60%;
+  margin: auto;
+}
+
+
+
+/* Forecast information */
+.forecast {
+  width: 50%;
+}
+
+#forecast-summary {
+  text-align: center;
+  margin-right: 70px;
+}
+
+.forecast-info {
+  margin: 0 60px;
+}
+
+click-prompt, click-prompt div {
+  padding-top: 25px;
+  text-align: center;
+}
+
+
+}
